# deejgui2

./: .eslintignore  .eslintrc.json  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx  main.tsx  routes.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: config.template.yaml
src-tauri/src/: main.rs
src/components/: DeleteApplicationButton.tsx  FilePicker.tsx  ProcessListItem.tsx  ProcessListModal.tsx  Slider.tsx  logo.tsx  slider.tsx
src/components/ui/: accordion.tsx  button.tsx  dialog.tsx  select.tsx
src/lib/commands/: application-config.ts  com-ports.ts  deej-config.ts  icons.ts  index.ts  processes.ts  useDeejConfig.ts
src/lib/hooks/: useAppSettings.ts  useDeejConfig.ts
src/lib/models/: config.ts  process.ts  settings.ts
src/pages/: AppSettingsPage.tsx  SettingsPage.tsx  SlidersPage.tsx
